# sitter

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  timer.desktop
packaging/: sitter.desktop
packaging/maintainer-scripts/: postinst
src/: dbus.rs  main.rs  ui.rs
